--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-image: url("assets/imagenes/fondo.jpg");
+    display: grid;
+    
+    
+  }
+
+img {
+ 
+    padding: 90px; 
+    margin: 15px; 
+    float: left; 
+    width: 350px; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+table {
+    font-family: arial, sans-serif;
+    border:separate;
+    width: 70%;
+    border-collapse: separate;
+    
+  }
+  
+  td, th {
+    border-color: #dddddd;
+    text-align: center;
+    padding: 10px;
+    
+    
+  }
+  
+  tr {
+    background-color: #dddddd;
+  }
+
+  .centrado{
+
+    margin-left: 27cm;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+  }
+
+.Rep{
+   
+    margin-right: 27cm;
+    width: 60px;
+    height: 60px;
+    padding: 3px;
+ 
 }
